# document-intelligence-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
data/samples/: README.md  generate_samples.py
docs/: setup.md
frontend/: style.css
project/: Dockerfile  Makefile  README.md  pyproject.toml
project/.github/workflows/: ci.yml
project/data/samples/: README.md
project/docs/: api.md  decisions.md  demo-walkthrough.md  interview-guide.md
project/frontend/: app.js  index.html
project/src/docai/: __init__.py  config.py  database.py
project/src/docai/api/: documents.py  export.py
project/src/docai/core/: errors.py
project/src/docai/models/: __init__.py  extraction.py
project/src/docai/schemas/: extraction.py  job.py
project/src/docai/services/: chunker.py  embedder.py  extractor.py  ocr.py  pipeline.py  rag.py
project/tests/: test_api.py  test_chunker.py  test_ocr.py  test_pipeline.py
src/docai/: config.py  database.py  main.py
src/docai/api/: documents.py  export.py  extraction.py  health.py  jobs.py  rag.py
src/docai/core/: __init__.py  llm.py  logging.py
src/docai/models/: document.py  extraction.py  job.py
src/docai/schemas/: document.py  rag.py
src/docai/services/: chunker.py  classifier.py  embedder.py  extractor.py  ocr.py  pipeline.py  rag.py  vector_store.py
tests/: conftest.py  test_api.py  test_chunker.py
